# coding-samples

./: .gitignore  CMakeLists-default  main-default  mk
cpp20-span/: CMakeLists.txt  main.cpp
design-patterns-pimpl/: CMakeLists.txt  gadget.hpp  main.cpp  widget.cpp  widget.hpp
draft-event-dispatcher/: CMakeLists.txt  main.cpp
multitherading/: CMakeLists.txt  basic_mutex.cpp  cv.cpp  deadlock.cpp  pass_exception.cpp  queue.cpp  shared_mutex.cpp  time_locable.cpp
perfect-forwarding-fail-cases/: CMakeLists.txt  main.cpp
posix-mq/: CMakeLists.txt  client.cpp  common.hpp  server.cpp
